# python

./: .gitignore  .nojekyll  LICENSE  README.md  TODO  appendix_collections.html  environment.yml  glossary.html  index.html  non-relational.ipynb  pyproject.toml  robots.txt  search.json  setup.html  sitemap.xml  traversal.py
book/: .gitignore  00_setup.qmd  01_intro.qmd  01_setup.qmd  02_hello.qmd  02_intro.qmd  02_number.qmd  02_numbers.qmd  03_condition.qmd  03_control-flow.qmd  03_numbers.qmd  04_functions.qmd  04_iteration.qmd  04_strings.qmd  05_control_flow.qmd  05_function.qmd  05_loops.qmd  06_functions.qmd  06_sequences.qmd  07_mapping.qmd  07_sequences.qmd  07_sets.qmd  08_collections.qmd  08_mapping.qmd  08_string.qmd  08_strings.qmd  09_comprehension.qmd  09_files.qmd  09_strings.qmd  10_comprehension.qmd  10_map_filter_reduce.qmd  10_serialization.qmd  11_errors.qmd  11_files.qmd  11_io.qmd  12_classes.qmd  12_extend.qmd  12_serialization.qmd  13_errors.qmd  13_extend.qmd  (+56 more)
book/_book/: 01_env.html  01_hello.html  02_code.html  02_hello.html  03_hello.html  03_numbers.html  04_sequences.html  04_strings.html  env_setup.html  index.html  intro.html  references.html  search.json  string_methods.html  string_methods.qmd  summary.html
book/appendix/: a1_functions.ipynb  a2_modules.ipynb  a3_recursion.ipynb  appendix_collections.qmd  appendix_languages.qmd  collections.ipynb  control_flow.ipynb  dict.ipynb  errors.ipynb  errors.qmd  file_io.ipynb  functions_and_methods.qmd  glossary.qmd  languages.ipynb  lazy.ipynb  lazy.qmd  numbers.ipynb  oop.ipynb  set.ipynb  (+10 more)
(+742 files in other folders)
