[project]
name = "pythonia"
version = "0.1.0"
description = "Python book in Arabic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "ipykernel",
    "jupyter",
    "jupyter-cache",
    "matplotlib>=3.10.0",
    "pandas",
    "panflute>=2.3.1",
    "quarto-cli>=1.6.42",
]
