[project]
name = "pythonia"
version = "0.1.0"
description = "Python book in Arabic"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "geopy>=2.4.1",
    "ipykernel",
    "jupyturtle>=2024.4.1",
    "matplotlib>=3.10.0",
    "pandas",
    "quarto-cli==1.7.31",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "jupyter-cache>=1.0.1",
    "panflute>=2.3.1",
]
